# MyhalSimulator

./: .devcontainer.json  .gitignore  README.md  c_cpp_properties.json  catkin_maker.sh  frames.gv  master.sh  melodic-TourGuide.code-workspace  notebook_plots.ipynb  quick_plots.py
.devcontainer/: devcontainer.json
docker_scripts/: classification_test_2.sh  collider_docker.sh  dashboard_docker.sh  double_docker..sh  double_docker.sh  double_docker_2.sh  melodic_dev.sh  melodic_docker.sh  multi_rands.sh  multi_tours.sh  noetic_docker.sh  nohup_multi_rands.sh  nohup_multi_tours.sh  simu_dev_noetic2.sh  simu_docker_noetic2.sh  train_colli_dev.sh  train_colli_doc.sh
src/dashboard/src/: assessor.py  data_processing.py  run_handler.py
src/dashboard/src/utilities/: bag_tools.py
src/jackal_velodyne/: CMakeLists.txt
src/jackal_velodyne/launch/: p1.launch  p2.launch
src/jackal_velodyne/launch/include/: move_base.launch  point_slam.launch  pointcloud_filter2.launch  run.rviz
src/jackal_velodyne/params/: base_local_planner_params.yaml  base_local_planner_params_old.yaml  jackal_control.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_old.yaml
src/jackal_velodyne/params/map_nav_params/: local_costmap_params.yaml
src/jackal_velodyne/urdf/: VLP-16.urdf.xacro
src/myhal_simulator/: CMakeLists.txt
src/myhal_simulator/params/Flow1_params/: scenario_params_V2.yaml
src/myhal_simulator/params/Flow2_params/: plugin_params.yaml  scenario_params_V2.yaml
src/myhal_simulator/params/Flow3_params/: scenario_params_V2.yaml
src/myhal_simulator/params/Frog1_params/: scenario_params_V2.yaml
src/myhal_simulator/params/Frog2_params/: plugin_params.yaml  scenario_params_V2.yaml
src/myhal_simulator/params/RandBounce_params/: common_vehicle_params.yaml  room_params_V2.yaml  scenario_params_V2.yaml
src/myhal_simulator/params/RandFlow_params/: common_vehicle_params.yaml  scenario_params_V2.yaml
src/myhal_simulator/params/RandWand_params/: scenario_params_V2.yaml
src/myhal_simulator/params/Sc1_flow_params/: camera_params.yaml  common_vehicle_params.yaml  model_params.yaml  room_params_V2.yaml  scenario_params_V2.yaml
src/myhal_simulator/params/custom_params_mgsa/: camera_params.yaml  common_vehicle_params.yaml  custom_simulation_params.yaml  model_params.yaml  plugin_params.yaml  room_params_V2.yaml  scenario_params_V2.yaml
src/myhal_simulator/src/: custom_velodyne.cpp  custom_velodyne.hh  navigation_goals_V2.cpp  puppeteer.cpp  puppeteer.hh  vehicles.cpp  vehicles.hh  world_entities.cpp  world_entities.hh  world_factory.cpp  world_factory.hh
src/myhal_simulator/src/include/: costmap.cpp  costmap.hh  flowfield.cpp  flowfield.hh  frame.hh  parse_tour.cpp  parse_tour.hh  priority_queue.hh  quadtree.cpp  quadtree.hh  utilities.cpp  utilities.hh
src/myhal_simulator/tours/A_short/: map.txt
src/myhal_simulator/tours/A_tour_flow/: map.txt
src/myhal_simulator/tours/A_tour_flow2/: map.txt
src/myhal_simulator/tours/frog_tour_1/: map.txt
src/myhal_simulator/tours/frog_tour_2/: map.txt
src/myhal_simulator/tours/mgsa_tour/: map.txt
src/myhal_simulator/worlds/: myhal_sim.world  myhal_template.txt
src/point_slam/: CMakeLists.txt  package.xml
src/point_slam/src/: frame_update.cpp  frame_update.h  test.txt
src/point_slam/src/cloud/: cloud.cpp
src/point_slam/src/grid_subsampling/: grid_subsampling.cpp
src/point_slam/src/icp/: icp.cpp  icp.h
src/point_slam/src/pointmap/: pointmap.h
src/point_slam/src/polar_processing/: polar_processing.cpp  polar_processing.h
src/teb_local_planner/: CMakeLists.txt
src/teb_local_planner/cfg/: TebLocalPlannerReconfigure.cfg  reconf_3Dcostmap.yaml  rviz_test_optim.rviz
src/teb_local_planner/include/teb_local_planner/: homotopy_class_planner.h  optimal_planner.h  planner_interface.h  predicted_costmap.h  teb_config.h  teb_local_planner_ros.h  timed_elastic_band.h
src/teb_local_planner/include/teb_local_planner/g2o_types/: edge_dynamic_obstacle.h  edge_obstacle.h  edge_predicted_costmap.h  edge_predicted_costmap3D.h  edge_time_optimal.h
src/teb_local_planner/scripts/: publish_costmap.py
src/teb_local_planner/src/: homotopy_class_planner.cpp  optimal_planner.cpp  predicted_costmap.cpp  teb_config.cpp  teb_local_planner_ros.cpp  test_optim_node.cpp
